--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .app-header {
